// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date filter component renders correctly 1`] = `
<form>
  <MuiPickersUtilsProvider
    utils={[Function]}
  >
    <PickerWithState
      KeyboardButtonProps={
        Object {
          "aria-label": "test filter from, date picker",
          "size": "small",
        }
      }
      allowKeyboardControl={true}
      aria-hidden="true"
      color="secondary"
      format="yyyy-MM-dd"
      id="test filter from"
      inputProps={
        Object {
          "aria-label": "test filter",
        }
      }
      invalidDateMessage="Invalid Date Format"
      maxDate={2000-01-01T00:00:00.000Z}
      maxDateMessage="Invalid date range"
      minDate={1900-01-01T00:00:00.000Z}
      minDateMessage="Date should not be before minimal date"
      onChange={[Function]}
      openTo="date"
      placeholder="From..."
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
      value={1999-01-01T00:00:00.000Z}
      views={
        Array [
          "year",
          "month",
          "date",
        ]
      }
    />
    <PickerWithState
      KeyboardButtonProps={
        Object {
          "aria-label": "test filter to, date picker",
          "size": "small",
        }
      }
      allowKeyboardControl={true}
      aria-hidden="true"
      color="secondary"
      format="yyyy-MM-dd"
      id="test filter to"
      inputProps={
        Object {
          "aria-label": "test filter",
        }
      }
      invalidDateMessage="Invalid Date Format"
      maxDate={2100-01-01T00:00:00.000Z}
      maxDateMessage="Date should not be after maximal date"
      minDate={1999-01-01T00:00:00.000Z}
      minDateMessage="Invalid date range"
      onChange={[Function]}
      openTo="date"
      placeholder="To..."
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
      value={2000-01-01T00:00:00.000Z}
      views={
        Array [
          "year",
          "month",
          "date",
        ]
      }
    />
  </MuiPickersUtilsProvider>
</form>
`;

exports[`Date filter component useTextFilter hook returns a function which can generate a working text filter 1`] = `
<form>
  <MuiPickersUtilsProvider
    utils={[Function]}
  >
    <PickerWithState
      KeyboardButtonProps={
        Object {
          "aria-label": "Start Date filter from, date picker",
          "size": "small",
        }
      }
      allowKeyboardControl={true}
      aria-hidden="true"
      color="secondary"
      format="yyyy-MM-dd"
      id="Start Date filter from"
      inputProps={
        Object {
          "aria-label": "Start Date filter",
        }
      }
      invalidDateMessage="Invalid Date Format"
      maxDate={2100-01-01T00:00:00.000Z}
      maxDateMessage="Invalid date range"
      minDate={1900-01-01T00:00:00.000Z}
      minDateMessage="Date should not be before minimal date"
      onChange={[Function]}
      openTo="date"
      placeholder="From..."
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
      value={null}
      views={
        Array [
          "year",
          "month",
          "date",
        ]
      }
    />
    <PickerWithState
      KeyboardButtonProps={
        Object {
          "aria-label": "Start Date filter to, date picker",
          "size": "small",
        }
      }
      allowKeyboardControl={true}
      aria-hidden="true"
      color="secondary"
      format="yyyy-MM-dd"
      id="Start Date filter to"
      inputProps={
        Object {
          "aria-label": "Start Date filter",
        }
      }
      invalidDateMessage="Invalid Date Format"
      maxDate={2100-01-01T00:00:00.000Z}
      maxDateMessage="Date should not be after maximal date"
      minDate={1900-01-01T00:00:00.000Z}
      minDateMessage="Invalid date range"
      onChange={[Function]}
      openTo="date"
      placeholder="To..."
      style={
        Object {
          "whiteSpace": "nowrap",
        }
      }
      value={null}
      views={
        Array [
          "year",
          "month",
          "date",
        ]
      }
    />
  </MuiPickersUtilsProvider>
</form>
`;
